--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src/index.ts",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "nodemon --exec node --loader ts-node/esm ./src/index.ts"
   },
   "keywords": [],
   "author": "",
