--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "./src/index.ts",
   "scripts": {
-"dev": "nodemon --exec node --loader ts-node/esm ./src/index.ts",
+    "dev:all": "concurrently \"npm run dev\" \"npm run stripe\"",
+    "dev": "nodemon --exec node --loader ts-node/esm ./src/index.ts",
     "stripe": "stripe listen --forward-to localhost:7000/api/order/checkout/webhook",
     "build": "npx tsc",
     "start": "node dist/index.js"
